refactor: adicionar mappers, config e exceptions; remover classes legadas